--- a/Blog/static/login.css
+++ b/Blog/static/login.css
@@ -1,21 +1,39 @@
-.container-fluid {
-    height: 100vh;
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}.container-fluid > div {
-    width: 85%;
-    min-width: 300px;
-    max-width: 500px;
-}.card{
-    width: 100%;
-    background-color: #282c34;
-}.social-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}.btn a, .btn a:hover {
-    color: white;
-    text-decoration: none;
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
+}
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+
+.form-signin .checkbox {
+  font-weight: 400;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
