--- a/Blog/templates/index.html
+++ b/Blog/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %} 
+{% extends 'base.html' %} 
 {% block title %}HOME{% endblock %} 
 {% block content %} 
     <div class="row">
