--- a/Blog/templates/base.html
+++ b/Blog/templates/base.html
@@ -22,7 +22,7 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <style>
         .bd-placeholder-img {
