--- a/Blog/templates/registration/login.html
+++ b/Blog/templates/registration/login.html
@@ -11,7 +11,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" >
     <title>signin</title>
 </head>
@@ -25,13 +24,13 @@
                     <div class="card-body">
                         <h2>signin</h2>
                         <hr>
-                        <form method="POST">
+                        <form action="" method="POST">
                             {% csrf_token %}
                             {{ form| crispy}} 
                             <div class="d-flex justify-content-around">
-                            <a href="{% url  'social:begin' 'github' %}"> LOGIN WITH GITHUB </a> | 
+                            <a href="{% url  'social:begin' 'github' %}" class="btn btn-outline-success float rigth"> LOGIN WITH GITHUB </a> | 
                             
-                            <input type="submit" value= "Ingresar" class="btn btn-outline-success float rigth">
+                            <input type="submit" value= "login" class="btn btn-outline-success float rigth">
                             </div>
                         </form>
 
@@ -41,6 +40,6 @@
             </div>
         </div>
     </div>
-    {% endblock content  %}
+    {% endblock %}
 </body>
 </html>
