protect url admin

--- a/Blog/templates/registration/login.html
+++ b/Blog/templates/registration/login.html
@@ -24,7 +24,7 @@
                     <div class="card-body">
                         <h2>signin</h2>
                         <hr>
-                        <form action="" method="POST">
+                        <form method="POST">
                             {% csrf_token %}
                             {{ form| crispy}} 
                             <div class="d-flex justify-content-around">
