--- a/Blog/templates/base.html
+++ b/Blog/templates/base.html
@@ -49,7 +49,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home">home</a>
+            <a class="navbar-brand" href="{% url  'home' %}">home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -67,15 +67,15 @@
                     </li>
 
                 </ul>
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="signin">login</a>
-                    </li>
+                <ul class="navbar-nav  mb-2 mb-md-0">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="logout">logout</a>
                     </li>
                     {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="signin">login</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="signup">signup</a>
                     {% endif %}
