--- a/Blog/templates/base.html
+++ b/Blog/templates/base.html
@@ -14,7 +14,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.84.0">
-    <title>Fixed top navbar example · Bootstrap v5.0</title>
+    <title>inicio</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/navbar-fixed/">
     <link rel="stylesheet" href="../../static/navbar.css">
@@ -57,10 +57,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">inicio</a>
+                        <a class="nav-link active" aria-current="page" href="{% url  'list' %}">inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">blog</a>
+                        <a class="nav-link active" aria-current="page" href="{% url  'create_post' %}">post</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">about us</a>
@@ -70,7 +70,10 @@
                 <ul class="navbar-nav  mb-2 mb-md-0">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="logout">logout</a>
+                        <a class="nav-link active" aria-current="page" href="{% url  'logout' %}">logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <p class="nav-link active" aria-current="page">{{user.username}}</p>
                     </li>
                     {% else %}
                     <li class="nav-item">
