--- a/Blog/templates/index.html
+++ b/Blog/templates/index.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %} 
 {% block title %}HOME{% endblock %} 
 {% block content %} 
-    <div class="row">
-        <div class="col-sm-12 mb-3">
-            <h4 class="text-center">Welcome {{ user.username }}</h4>
-        </div>
-    </div>
+
+<h2>my posts</h2>
+
+<ul>
+    {% for post in posts %}
+        <li>
+            <h2>{{post.title}}</h1>
+            <p>{{post.user}}</p>   
+            <p>{{post.content}}</p>
+            <p>{{post.date}}</p>
+        </li>
+    {% endfor %}
+</ul>
+
+
 {% endblock %}
